--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -55,7 +55,7 @@
 <a href="halaman4.html">Halaman 4</a>|
 <a href="halaman5.html">Halaman 5</a>|
 <a href="halaman4.html">Halaman 6</a>|
-<a href="halaman4.html">Halaman 7</a></p>
+<a href="halaman4.html">Halaman 7</a></p>| 
     <div class="chat-container">
         <div class="chat-box" id="chat-box"></div>
         <div class="chat-input">
@@ -100,5 +100,6 @@
     </script>
 </body>
 </html>
+
 
 
