--- a/webti/halaman6.html
+++ b/webti/halaman6.html
@@ -46,14 +46,17 @@
     </style>
 </head>
 <body>
-<p><a href="index.md">Index</a>
+    <div class="nav-container">
+<a href="index.md">Index</a>
 <a href="halaman1.html">Halaman 1</a>|
 <a href="halaman2.html">Halaman 2</a>|
 <a href="halaman3.html">Halaman 3</a>|
 <a href="halaman4.html">Halaman 4</a>|
 <a href="halaman5.html">Halaman 5</a>|
 <a href="halaman6.html">Halaman 6</a>|
-<a href="halaman7.html">Halaman 7</a></p>
+<a href="halaman7.html">Halaman 7</a>
+    </div>
+    
     <div class="calculator">
         <input type="text" id="display" disabled>
         <div class="buttons">
@@ -95,4 +98,5 @@
     </script>
 </body>
 </html>
+
 
