--- a/webti/halaman6.html
+++ b/webti/halaman6.html
@@ -1,25 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Kalkulator Sederhana</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            background-color: #f4f4f4;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
             height: 100vh;
-            background-color: #f4f4f4;
+        }
+        .nav-container {
+            width: 100%;
+            background: #ffffff; /* background putih */
+            padding: 10px 0;
+            text-align: center;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 100;
+        }
+        .nav-container a {
+            margin: 0 8px;
+            text-decoration: none;
+            color: #333;
+            font-weight: normal;
+        }
+        .nav-container a:hover {
+            text-decoration: underline;
         }
         .calculator {
             width: 250px;
             background: #ccccff;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
             text-align: center;
+            margin-top: 70px; /* agar tidak tertutup nav */
         }
         .calculator input {
             width: 100%;
@@ -27,6 +49,8 @@
             text-align: right;
             font-size: 1.5em;
             margin-bottom: 10px;
+            padding-right: 10px;
+            box-sizing: border-box;
         }
         .buttons {
             display: grid;
@@ -39,6 +63,8 @@
             border: none;
             background: #e3fffb;
             cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.2s ease;
         }
         .buttons button:hover {
             background: #bbb;
@@ -47,31 +73,34 @@
 </head>
 <body>
     <div class="nav-container">
-<a href="index.md">Index</a>
-<a href="halaman1.html">Halaman 1</a>|
-<a href="halaman2.html">Halaman 2</a>|
-<a href="halaman3.html">Halaman 3</a>|
-<a href="halaman4.html">Halaman 4</a>|
-<a href="halaman5.html">Halaman 5</a>|
-<a href="halaman6.html">Halaman 6</a>|
-<a href="halaman7.html">Halaman 7</a>
+        <a href="index.md">Index</a>
+        <a href="halaman1.html">Halaman 1</a>|
+        <a href="halaman2.html">Halaman 2</a>|
+        <a href="halaman3.html">Halaman 3</a>|
+        <a href="halaman4.html">Halaman 4</a>|
+        <a href="halaman5.html">Halaman 5</a>|
+        <a href="halaman6.html">Halaman 6</a>|
+        <a href="halaman7.html">Halaman 7</a>
     </div>
-    
+
     <div class="calculator">
-        <input type="text" id="display" disabled>
+        <input type="text" id="display" disabled />
         <div class="buttons">
             <button onclick="clearDisplay()">C</button>
             <button onclick="appendValue('/')">/</button>
             <button onclick="appendValue('*')">*</button>
             <button onclick="appendValue('-')">-</button>
+
             <button onclick="appendValue('7')">7</button>
             <button onclick="appendValue('8')">8</button>
             <button onclick="appendValue('9')">9</button>
             <button onclick="appendValue('+')">+</button>
+
             <button onclick="appendValue('4')">4</button>
             <button onclick="appendValue('5')">5</button>
             <button onclick="appendValue('6')">6</button>
             <button onclick="calculateResult()">=</button>
+
             <button onclick="appendValue('1')">1</button>
             <button onclick="appendValue('2')">2</button>
             <button onclick="appendValue('3')">3</button>
@@ -98,5 +127,3 @@
     </script>
 </body>
 </html>
-
-
