--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -133,6 +133,7 @@
                 "hai": "Hai juga!",
                 "bagaimana kabarmu?": "Aku baik-baik saja.",
                 "siapa namamu?": "Aku chat bot."
+                "alief randiansyah pradanaputra, itu siapa?" : "mahasiswa ITS."
             };
             return responses[input.toLowerCase()] || "Maaf saya tidak tahu.";
         }
@@ -146,3 +147,4 @@
     </script>
 </body>
 </html>
+
