--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -133,7 +133,7 @@
                 "hai": "Hai juga!",
                 "bagaimana kabarmu?": "Aku baik-baik saja.",
                 "siapa namamu?": "Aku chat bot."
-                "alief randiansyah pradanaputra, itu siapa?" : "Mahasiswa ITS."
+                "siapa itu alief randiansyah pradanaputra?" : "Mahasiswa ITS."
             };
             return responses[input.toLowerCase()] || "Maaf saya tidak tahu.";
         }
@@ -147,5 +147,6 @@
     </script>
 </body>
 </html>
+
 
 
