--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -132,7 +132,7 @@
             const responses = {
                 "hai": "Hai juga!",
                 "bagaimana kabarmu?": "Aku baik-baik saja.",
-                "siapa namamu?": "Aku chat bot."
+                "siapa namamu?": "Aku chat bot.",
                 "siapa itu alief randiansyah pradanaputra?" : "Mahasiswa ITS."
             };
             return responses[input.toLowerCase()] || "Maaf saya tidak tahu.";
@@ -147,6 +147,7 @@
     </script>
 </body>
 </html>
+
 
 
 
