--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -133,7 +133,8 @@
                 "hai": "Hai juga!",
                 "bagaimana kabarmu?": "Aku baik-baik saja.",
                 "siapa namamu?": "Aku chat bot.",
-                "siapa itu alief randiansyah pradanaputra?": "Mahasiswa ITS."
+                "siapa itu alief randiansyah pradanaputra?": "Mahasiswa ITS.",
+                "jurusan apa dia?" : "Jurusan matematika."
             };
             return responses[input.toLowerCase()] || "Maaf saya tidak tahu.";
         }
@@ -147,3 +148,4 @@
     </script>
 </body>
 </html>
+
